--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -4,6 +4,9 @@
     "rooftop": "TAKTERRASSE",
     "rainbed": "REGNSENG",
     "indoor": "INNENDØRSPLANTER",
+    "rooftop2": "Takterrasse",
+    "rainbed2": "Regnseng",
+    "indoor2": "Innendørsplanter",
     "about": "OM",
     "what": "HVA VI GJØR",
     "why": "HVORFOR OSS",
@@ -11,5 +14,13 @@
     "contact": "KONTAKT",
     "contactU": "KONTAKT OSS",
     "partner": "BLI EN PARTNER",
-    "signIn": "Logg inn"
+    "signIn": "Logg inn",
+    "hero_main1": "Planlegg, design og bestill grøntområder inne, ute og på toppen av bygninger",
+    "hero_main2": " alt på ett sted.",
+    "hero_account": "Har du allerede en konto?",
+    "see_more": "Se mer",
+    "read_more": "Les mer",
+    "beta": "Gå til Beta",
+    "demo": "Forespør Demo",
+    "or": "ELLER"
 }
