--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -22,5 +22,8 @@
     "read_more": "Les mer",
     "beta": "Gå til Beta",
     "demo": "Forespør Demo",
-    "or": "ELLER"
+    "or": "ELLER",
+    "my_projects": "Mine Prosjekter",
+    "account": "Kontoinnstillinger",
+    "log_out": "Logg Ut"
 }
