--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -27,8 +27,12 @@
   "account": "Account Settings",
   "log_out": "Log Out",
   "footer": {
-    "description": "We are the new platform for greenspaces",
+    "description": "We are the new platform for green spaces",
     "button": "Tell us about your project",
+    "greenspaces": "Greenspaces",
+    "rooftop": "Rooftop",
+    "rainbed": "Rainbed",
+    "indoor": "Indoor",
     "about": "About",
     "contact": "Contact",
     "what": "What we do",
