Updated translation for greenspaces

--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "home": "HOME",
-    "greenspaces": "GREENSPACES",
+    "greenspaces": "PROJECTS",
     "rooftop": "ROOFTOP",
     "rainbed": "RAINBED",
     "indoor": "INDOOR",
