--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -1,12 +1,13 @@
 {
     "home": "HJEM",
-    "greenspaces": "GRØNNE AREALER",
+    "greenspaces": "PROSJEKTER",
     "rooftop": "TAKTERRASSE",
-    "rainbed": "REGNSENG",
-    "indoor": "INNENDØRSPLANTER",
+    "rainbed": "REGNBED",
+    "indoor": "INNENDØRS",
     "rooftop2": "Takterrasse",
-    "rainbed2": "Regnseng",
-    "indoor2": "Innendørsplanter",
+    "rainbed2": "Regnbed",
+    "indoor2": "Innendørs",
+    "who": "HVEM VI ER",
     "about": "OM",
     "what": "HVA VI GJØR",
     "why": "HVORFOR OSS",
