--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -26,6 +26,95 @@
     "or": "ELLER",
     "my_projects": "Mine Prosjekter",
   "log_out": "Logg Ut",
+
+    "plantlist":"Planteliste",
+    "show_more":"Vis mer",
+    "show_less":"Vis mindre",
+    "start_project":"Start prosjekt",
+    "or_sm":"eller",
+
+    "RED":"Eiendomsutvikler",
+    "LARK":"Landskapsarkitekt",
+    "LENT":"Landskapsentreprenør",
+    "PN":"Planteskole",
+
+  "section2_top1": "SquareRoot gjør byer",
+  "section2_outlined1": "grønne",
+  "section2_top2": ", bokstavelig talt!",
+  "section2_bottom1": "Her på SquareRoot tror vi på at bærekraftige byer er",
+  "section2_outlined2": "fremtiden vår",
+  "section2_bottom2": ". Med mange grøntarealer inne, ute og på toppen av bygninger.",  
+
+  "section3_top1": "Vi ønsker å gjøre det enklere å",
+  "section3_outlined": "velge natur",
+  "section3_top2": "for dine byggeprosjekter.",
+  "section3_bottom": "Sammen med NIBIO, biologer, landskapsarkitekter og planteskoler har vi utviklet plantelister for urbane grøntområder og standardkonsepter, som takhager og regnbed, for å håndtere store nedbørsmengder samt øke biologisk mangfold.",
+  
+  "section4_item1": "Takhage",
+  "section4_item1_desc1": "Optimaliser taket med et av våre konsepter for",
+  "section4_item1_outlined": "takhage",
+  "section4_item1_desc2": ". Plantene og utstyret (?) er utvalgt og designet for å dekke dine behov.",
+
+  "section4_item2": "Regnbed",
+  "section4_item2_desc": "Plantene for",
+  "section4_item2_outlined": "regnbed",
+  "section4_item2_desc2": "er nøye utvalgt til våtområder, for å kunne stå opptil 48 timer i vann, samt med tørke-tolerante planter ved utkanten, i tørkesonen.",
+
+  "section4_item3": "Innendørs",
+  "section4_item3_desc": "Vår partner Leaf har omfattende ekspertise med",
+  "section4_item3_outlined": "innendørsplanter",
+  "section4_item3_desc2": ". Pen estetikk kombineres med minimalt vedlikehold.",
+
+  "section5_p1":"Ved å integrere natur inn i bygningsprosjektet, vil det bidra til å møte kravene for overvannshåndtering. Lokale planter øker også ",
+  "section5_outlined1":"biomangfoldet",
+  "section5_p2":"og dermed også ",
+  "section5_outlined2":"BREEAM-poeng.",
+  "section5_p3":" Å bygge prosjekter med et høyt miljøavtrykk øker verdier av eiendommen din og ",
+  "section5_outlined3":"holder byene våres friske",
+
+  "section6_top":"KOMMER SNART",
+  "section6_bottom1":"Vår digitale plattform gjør det å finne og bestille planter",
+  "section6_outlined":"enkelt og tilgjengelig overalt.",
+  "section6_bottom2":"Gjennom vårt nettverk bestående av lokale planteskoler, hjelper vi deg med å finne riktige planter til rett sted og vise hvilke som er tilgjengelige slik at det blir levert i tide.",
+  "section6_bottom3":"Kommer høsten 2021. Hold deg oppdatert ved å abonnere på nyhetsbrevet vårt.",
+
+  "section7_top":"I samarbeid med",
+
+  "who_h1":"Hvem vi er",
+  "who_p1":"Ser du etter planter til å skape utmerket og klimarobuste urbane grønne arealer? Usikker på hvilken planter er tilpasset kravene og om de er tilgjengelige? SquareRoot løser dette for deg!",
+  "who_p2":"Her kan du velge prosjekttyper og stil for arealet ditt, bestemme hvilke funksjonaliteter du ønsker å fokusere på og skreddersy plantelistene vi foreslår for deg. Vi sikrer både respekt av kravene og tilgjengeligheten av planten for deg.",
+  "who_p3":"Sammen gjør vi byene våre grønnere!",
+  "who_h2":"Vårt team",
+  "who_img1_desc1":"Jo Deketelaere",
+  "who_img1_desc2":"Grunnlegger og CEO",
+  "who_worker1_outlined":"Jo ",
+  "who_worker1_desc1":"startet sin karriere innen internasjonal forretningsutvikling for store energiselskaper med fokus på klimabegrensning, miljøpolitikk og investeringer i teknologier med lavt karbonutslipp.",
+  "who_worker1_desc2":"Han startet sitt eget selskap Greenbeat for å utvikle et smart blågrønt tak som kombinerer automatisert forvaltning av byvegetasjon og intelligent kontroll av vannreservoarer. Dette prosjektet, kalt RainBrain, har mottatt finansiering fra OrganiCity og SynchroniCity, begge under H2020-paraplyen.",
+  "who_worker1_desc3":"Han bor i Oslo, Norge med sin kone og barn, liker å vandre i lokal natur og er et engasjert medlem av swimrun-felleskapet.",
+  "who_img2_desc1":"Michel Wolfstirn",
+  "who_img2_desc2":"Grunnlegger og COO",
+  "who_worker2_outlined":"Michel ",
+  "who_worker2_desc1":"Med en forkjærlighet til naturen og friluftsliv, har ",
+  "who_worker2_desc2":"en lidenskap for miljøet og å bidra med å løse problemer relatert til klimaendringer",
+  "who_worker2_desc3":"Han var med på å grunnlegge BiomimicryNorway, en frivillig organisasjon som er dedikert til å utdanne mennesker og selskaper om bærekraftig innovasjon inspirert av naturen. Han har brukt mye energi på å hjelpe forskjellige oppstartsbedrifter og initiativer de siste årene ved å bruke sine mange ferdigheter, alt fra design til forretningsmodellering for sirkulær økonomi. ",
+  "who_worker2_desc4":"Michel har også bidratt med å bygge for Gruten, den første norske urbane gården som dyrker sopp på kaffegrut. Han er også involvert med Pådriv i prosjekter knyttet til bærekraftig byutvikling.",
+
+  "contact_h1":"Kontakt oss",
+  "contact_p1":"Hvordan kan vi hjelpe deg?",
+  "contact_h3_1":"E-post",
+  "contact_h3_desc1":"michel@squareroot.cc",
+  "contact_h3_2":"Telefon",
+  "contact_h3_desc2":"925 57 654",
+
+  "partner_h1":"Bli partner",
+  "partner_h2":"Sammen gjør vi byene våres grønne. ",
+  "partner_p1":"Vi ønsker å samarbeide med alle aktører i planleggingen og utformingen av urbane grøntområder. Dette er for at vi kan gjøre arbeidsprosessen sømløs slik at du kan lage og vedlikeholde motstandsdyktige grøntområder.",
+  "partner_RED_desc":"Utforsk konsepter som vil gjøre bygningen din grønnere",
+  "partner_LARK_desc":"Se hva som er tilgjengelig og lag ditt eget fantastiske prosjekt",
+  "partner_LENT_desc":"Bestill riktige planter til riktig sted på plattformen vår",
+  "partner_PN_desc":"Vis og selg plantene dine på plattformen vår",
+ 
+
   "footer": {
     "description": "",
     "button": "",
