Adding content and translating on the team

--- a/square-root/public/assets/locales/no/translation.json
+++ b/square-root/public/assets/locales/no/translation.json
@@ -85,19 +85,19 @@
   "who_p2":"Her kan du velge prosjekttyper og stil for arealet ditt, bestemme hvilke funksjonaliteter du ønsker å fokusere på og skreddersy plantelistene vi foreslår for deg. Vi sikrer både respekt av kravene og tilgjengeligheten av planten for deg.",
   "who_p3":"Sammen gjør vi byene våre grønnere!",
   "who_h2":"Vårt team",
-  "who_img1_desc1":"Jo Deketelaere",
-  "who_img1_desc2":"Grunnlegger og CEO",
-  "who_worker1_outlined":"Jo ",
-  "who_worker1_desc1":"startet sin karriere innen internasjonal forretningsutvikling for store energiselskaper med fokus på klimabegrensning, miljøpolitikk og investeringer i teknologier med lavt karbonutslipp.",
-  "who_worker1_desc2":"Han startet sitt eget selskap Greenbeat for å utvikle et smart blågrønt tak som kombinerer automatisert forvaltning av byvegetasjon og intelligent kontroll av vannreservoarer. Dette prosjektet, kalt RainBrain, har mottatt finansiering fra OrganiCity og SynchroniCity, begge under H2020-paraplyen.",
-  "who_worker1_desc3":"Han bor i Oslo, Norge med sin kone og barn, liker å vandre i lokal natur og er et engasjert medlem av swimrun-felleskapet.",
-  "who_img2_desc1":"Michel Wolfstirn",
-  "who_img2_desc2":"Grunnlegger og COO",
-  "who_worker2_outlined":"Michel ",
-  "who_worker2_desc1":"Med en forkjærlighet til naturen og friluftsliv, har ",
-  "who_worker2_desc2":"en lidenskap for miljøet og å bidra med å løse problemer relatert til klimaendringer",
-  "who_worker2_desc3":"Han var med på å grunnlegge BiomimicryNorway, en frivillig organisasjon som er dedikert til å utdanne mennesker og selskaper om bærekraftig innovasjon inspirert av naturen. Han har brukt mye energi på å hjelpe forskjellige oppstartsbedrifter og initiativer de siste årene ved å bruke sine mange ferdigheter, alt fra design til forretningsmodellering for sirkulær økonomi. ",
-  "who_worker2_desc4":"Michel har også bidratt med å bygge for Gruten, den første norske urbane gården som dyrker sopp på kaffegrut. Han er også involvert med Pådriv i prosjekter knyttet til bærekraftig byutvikling.",
+  "jo_img1_desc1":"Jo Deketelaere",
+  "jo_img1_desc2":"Grunnlegger og CEO",
+  "jo_outlined":"Jo ",
+  "jo_desc1":"startet sin karriere innen internasjonal forretningsutvikling for store energiselskaper med fokus på klimabegrensning, miljøpolitikk og investeringer i teknologier med lavt karbonutslipp.",
+  "jo_desc2":"Han startet sitt eget selskap Greenbeat for å utvikle et smart blågrønt tak som kombinerer automatisert forvaltning av byvegetasjon og intelligent kontroll av vannreservoarer. Dette prosjektet, kalt RainBrain, har mottatt finansiering fra OrganiCity og SynchroniCity, begge under H2020-paraplyen.",
+  "jo_desc3":"Han bor i Oslo, Norge med sin kone og barn, liker å vandre i lokal natur og er et engasjert medlem av swimrun-felleskapet.",
+  "michel_img2_desc1":"Michel Wolfstirn",
+  "michel_img2_desc2":"Grunnlegger og COO",
+  "michel_outlined":"Michel ",
+  "michel_desc1":"Med en forkjærlighet til naturen og friluftsliv, har ",
+  "michel_desc2":"en lidenskap for miljøet og å bidra med å løse problemer relatert til klimaendringer",
+  "michel_desc3":"Han var med på å grunnlegge BiomimicryNorway, en frivillig organisasjon som er dedikert til å utdanne mennesker og selskaper om bærekraftig innovasjon inspirert av naturen. Han har brukt mye energi på å hjelpe forskjellige oppstartsbedrifter og initiativer de siste årene ved å bruke sine mange ferdigheter, alt fra design til forretningsmodellering for sirkulær økonomi. ",
+  "michel_desc4":"Michel har også bidratt med å bygge for Gruten, den første norske urbane gården som dyrker sopp på kaffegrut. Han er også involvert med Pådriv i prosjekter knyttet til bærekraftig byutvikling.",
 
   "contact_h1":"Kontakt oss",
   "contact_p1":"Hvordan kan vi hjelpe deg?",
