--- a/square-root/public/assets/locales/en/translation.json
+++ b/square-root/public/assets/locales/en/translation.json
@@ -87,19 +87,51 @@
   "who_p2":"Here you can choose a project type, pick a look for your space, decide the functionality focus and customize the plant list we suggest for you. We make sure the plants fit your requirements and will be available.",
   "who_p3":"Together we will green our cities!",
   "who_h2":"The Team",
-  "who_img1_desc1":"Jo Deketelaere",
-  "who_img1_desc2":"Founder og CEO",
-  "who_worker1_outlined":"Jo ",
-  "who_worker1_desc1":"started his career in international business development for large energy companies focusing on climate mitigation, environmental policies and investment in low carbon emitting technologies.",
-  "who_worker1_desc2":"He started his own company Greenbeat to develop a smart blue-green roof combining automated management of urban vegetation and intelligent control of water reservoirs. This project called RainBrain has received funding from OrganiCity and SynchroniCity, both under the H2020 umbrella.",
-  "who_worker1_desc3":"He lives in Oslo, Norway with his wife and daughter, enjoys hiking in local nature and is a happy member of the swimrun community.",
-  "who_img2_desc1":"Michel Wolfstirn",
-  "who_img2_desc2":"Founder og COO",
-  "who_worker2_outlined":"Michel ",
-  "who_worker2_desc1":"A lover of nature and the outdoors, ",
-  "who_worker2_desc2":"is passionate about the environment and contributing to solving climate change.", 
-  "who_worker2_desc3":"He co-founded BiomimicryNorway, an NGO dedicated to educating people and companies about sustainable innovation inspired by nature. He has spent a great deal of energy helping various startups and initiatives in the past years using his many skills ranging from design to business modelling for Circular Economy.", 
-  "who_worker2_desc4":"Amongst other things he has contributed building for Gruten the first norwegian urban farm growing mushrooms on coffee grounds. He is also involved with Pådriv on projects related to sustainable urban development.",
+  "jo_img1_desc1":"Jo Deketelaere",
+  "jo_img1_desc2":"Founder og CEO",
+  "jo_outlined":"Jo ",
+  "jo_desc1":"started his career in international business development for large energy companies focusing on climate mitigation, environmental policies and investment in low carbon emitting technologies.",
+  "jo_desc2":"He started his own company Greenbeat to develop a smart blue-green roof combining automated management of urban vegetation and intelligent control of water reservoirs. This project called RainBrain has received funding from OrganiCity and SynchroniCity, both under the H2020 umbrella.",
+  "jo_desc3":"He lives in Oslo, Norway with his wife and daughter, enjoys hiking in local nature and is a happy member of the swimrun community.",
+  "michel_img2_desc1":"Michel Wolfstirn",
+  "michel_img2_desc2":"Founder og COO",
+  "michel_outlined":"Michel ",
+  "michel_desc1":"A lover of nature and the outdoors, ",
+  "michel_desc2":"is passionate about the environment and contributing to solving climate change.", 
+  "michel_desc3":"He co-founded BiomimicryNorway, an NGO dedicated to educating people and companies about sustainable innovation inspired by nature. He has spent a great deal of energy helping various startups and initiatives in the past years using his many skills ranging from design to business modelling for Circular Economy.", 
+  "michel_desc4":"Amongst other things he has contributed building for Gruten the first norwegian urban farm growing mushrooms on coffee grounds. He is also involved with Pådriv on projects related to sustainable urban development.",
+
+  
+  "karolina_img1_desc1":"Karolina Maciejewska",
+  "karolina_img1_desc2":"Backend Developer",
+  "karolina_outlined":"Karolina",
+  "karolina_desc1":"who is Karolina at SquareRoot?",
+  "karolina_desc2":"is an awesome backend developer",
+
+  "gro_img1_desc1":"Gro Elisabeth Oleivsgard",
+  "gro_img1_desc2":"UX/UI and Frontend Developer",
+  "gro_outlined":"Gro",
+  "gro_desc1":"who is Gro at SquareRoot?",
+  "gro_desc2":"is an awesome frontend developer",
+
+  "kristian_img1_desc1":"Kristian Sørum",
+  "kristian_img1_desc2":"Developer Trainee",
+  "kristian_outlined":"Kristian",
+  "kristian_desc1":"who is Kristian at SquareRoot?",
+  "kristian_desc2":"is an awesome trainee developer",
+
+  "sanne_img1_desc1":"Sanne Edland",
+  "sanne_img1_desc2":"Developer Trainee",
+  "sanne_outlined":"Sanne",
+  "sanne_desc1":"who is Sanne at SquareRoot?",
+  "sanne_desc2":"is an awesome frontend trainee",
+
+  "rosa_img1_desc1":"Rosa Berg",
+  "rosa_img1_desc2":"Developer Trainee",
+  "rosa_outlined":"Rosa",
+  "rosa_desc1":"who is Rosa at SquareRoot?",
+  "rosa_desc2":"is an awesome backend trainee",
+
 
   "contact_h1":"Contact us",
   "contact_p1":"How can we help you?",
